[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mqtty"
version = "0.1.0"
description = "Bridges MQTT topics to a pseudo-terminal device"
authors = [
    {name = "Mark Featherston", email = "mark@embeddedTS.com"}
]
dependencies = [
    "paho-mqtt"
]

[project.scripts]
mqtty = "mqtty.mqtty:main"
